# HolocronDB

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  client_config.toml  log4rs.yml  server_config.toml
scripts/: sync-protos.sh
src/: lib.rs  main.rs
src/key_value_store/: errors.rs  filestore.rs  key_value_pair.rs  key_value_store.rs  mod.rs
src/proto/: key_value_store.proto  socket_messages.proto
src/socket_interface/: client_impl.rs  decode_utils.rs  holocron_db_client_impl.rs  holocron_db_server_impl.rs  kvs_client_impl.rs  kvs_persistent_client_impl.rs  kvs_server_impl.rs  mod.rs  server_impl.rs  socket_errors.rs
