[package]
name = "key_value_store"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = { version = "0.3" }

[build-dependencies]
prost-build = { version = "0.14" }