[package]
name = "holocron_db"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = { version = "0.3" }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
prost-build = { version = "0.14" }